--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.study.dh.keeplearn">
-
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".Activity.DetailActivity" />
+        <activity android:name=".Activity.SplashActivity"
+            android:theme="@style/Theme.AppStartLoadTranslucent"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
