--- a/KeepLearn/app/build.gradle
+++ b/KeepLearn/app/build.gradle
@@ -39,10 +39,14 @@ dependencies {
 
     //网络
     compile 'com.google.code.gson:gson:2.7'           //Gson是谷歌的Json处理包，添加依赖。
+
     compile 'com.squareup.retrofit2:retrofit-converters:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'      //适配器
+
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
