--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Activity.DetailActivity" />
         <activity
             android:name=".Activity.SplashActivity"
@@ -21,9 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EntryActivity">
-
-        </activity>
+        <activity android:name=".EntryActivity" />
+        <activity android:name=".Activity.HandleDbActivity" />
+        <activity android:name=".Activity.zhihuDailyActivity"></activity>
     </application>
 
 </manifest>
