--- a/KeepLearn/build.gradle
+++ b/KeepLearn/build.gradle
@@ -9,6 +9,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'        //GreenDao3依赖
     }
 }
 
