1.书写使用greendao 操作数据库实例，实现本地数据库操作中的 增删改查； 2.引入Android-Debug-Database，在浏览器上查看数据库内容；

--- a/KeepLearn/app/build.gradle
+++ b/KeepLearn/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.0'       //greendao依赖
 
 
+    debugCompile 'com.amitshekhar.android:debug-db:0.2.0'   //Android Debug Database 是一个用于在Android应用中调试数据库和分享参数的强大的库。
+
 }
