--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -5,13 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".db.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity android:name=".Activity.DetailActivity" />
+        <activity android:name=".Activity.DetailActivity"
+            android:theme="@android:style/Theme.Translucent"
+            />
         <activity
             android:name=".Activity.SplashActivity"
             android:theme="@style/Theme.AppStartLoadTranslucent">
