1.完成知乎日报主界面网络数据显示； 2.增加轮播图依赖，使用；

--- a/KeepLearn/app/build.gradle
+++ b/KeepLearn/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
 
     debugCompile 'com.amitshekhar.android:debug-db:0.2.0'   //Android Debug Database 是一个用于在Android应用中调试数据库和分享参数的强大的库。
 
+    compile 'com.bigkoo:convenientbanner:2.0.5'     //轮播图
 }
