--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity android:name=".Activity.DetailActivity"
-            android:theme="@android:style/Theme.Translucent"
-            />
+        <activity
+            android:name=".Activity.DetailActivity"
+            android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name=".Activity.SplashActivity"
             android:theme="@style/Theme.AppStartLoadTranslucent">
@@ -26,7 +26,8 @@
         </activity>
         <activity android:name=".EntryActivity" />
         <activity android:name=".Activity.HandleDbActivity" />
-        <activity android:name=".zhihuDaily.zhihuDailyActivity"></activity>
+        <activity android:name=".zhihuDaily.zhihuDailyActivity" />
+        <activity android:name=".zhihuDaily.zhihuDailyDetailActivity"></activity>
     </application>
 
 </manifest>
