--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -11,6 +11,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
+        <meta-data
+              android:name="UMENG_APPKEY"
+              android:value="58a1637caed1793e030021af"
+            ></meta-data>                <!-- 友盟 app key-->
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL_VALUE}"
+            ></meta-data>         <!-- 渠道号-->
+
+
         <activity android:name=".MainActivity" />
         <activity
             android:name=".Activity.DetailActivity"
