1.增加了eventBus 3.0的使用 实例

--- a/KeepLearn/app/build.gradle
+++ b/KeepLearn/app/build.gradle
@@ -116,13 +116,18 @@ dependencies {
 
     compile 'com.bigkoo:convenientbanner:2.0.5'     //轮播图
 
-    compile 'com.umeng.analytics:analytics:latest.integration'   //友盟分析
+
     /*
-      多渠道打包步骤
-      1. 添加对友盟库的依赖 ；
-      2.在manifest 文件声明appkey, 以及渠道占位符 ；
-      3.在gradle 中动态替换掉占位符value 即可；
-      4.在控制台使用 ./gradlew  assembleRelease  自动打出所有渠道的包
-     */
+  多渠道打包步骤
+  1. 添加对友盟库的依赖 ；
+  2.在manifest 文件声明appkey, 以及渠道占位符 ；
+  3.在gradle 中动态替换掉占位符value 即可；
+  4.在控制台使用 ./gradlew  assembleRelease  自动打出所有渠道的包
+ */
+    compile 'com.umeng.analytics:analytics:latest.integration'   //友盟分析
+
+
+    compile 'org.greenrobot:eventbus:3.0.0'    //引入eventBus
+
 
 }
