1. 增加视屏播放处理，待写： 调节音量，亮度，播放进度，播放时间的更新； 2. 文件对比功能；  用tomcat读取本地json文本内容，作对比；

--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -12,17 +12,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <meta-data
-              android:name="UMENG_APPKEY"
-              android:value="58a1637caed1793e030021af"
-            ></meta-data>                <!-- 友盟 app key-->
+            android:name="UMENG_APPKEY"
+            android:value="58a1637caed1793e030021af" /> <!-- 友盟 app key -->
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="${UMENG_CHANNEL_VALUE}"
-            ></meta-data>         <!-- 渠道号-->
-
+            android:value="${UMENG_CHANNEL_VALUE}" /> <!-- 渠道号 -->
 
         <activity android:name=".MainActivity" />
         <activity
@@ -39,10 +34,13 @@
         </activity>
         <activity android:name=".EntryActivity" />
         <activity android:name=".Activity.HandleDbActivity" />
-        <activity android:name=".zhihuDaily.zhihuDailyActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            />
-        <activity android:name=".zhihuDaily.zhihuDailyDetailActivity"></activity>
+        <activity
+            android:name=".zhihuDaily.zhihuDailyActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".zhihuDaily.zhihuDailyDetailActivity" />
+        <activity android:name=".playvideo.PlayVideoActivity"
+                  android:screenOrientation="landscape"
+            ></activity>
     </application>
 
 </manifest>
