1.完成通过tomcat 在同一Wi-Fi下获取本地数据文件，不要使用localhost， 使用电脑IP地址作为请求路径；

--- a/KeepLearn/app/build.gradle
+++ b/KeepLearn/app/build.gradle
@@ -139,7 +139,10 @@ dependencies {
 
 
     compile 'cn.jiguang.sdk:jpush:3.0.0' // 极光推送
-     compile 'cn.jiguang.sdk:jcore:1.0.0'
+    compile 'cn.jiguang.sdk:jcore:1.0.0'
+
+
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'     //okhttp 3
 
 
 }
