--- a/KeepLearn/app/build.gradle
+++ b/KeepLearn/app/build.gradle
@@ -107,9 +107,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit-converters:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'      //适配器
+  //  compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+  //  compile 'io.reactivex.rxjava2:rxjava:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'      //适配器
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
