--- a/KeepLearn/app/src/main/AndroidManifest.xml
+++ b/KeepLearn/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-
     <uses-permission android:name="com.study.dh.keeplearn.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -52,11 +50,10 @@
             android:name=".zhihuDaily.zhihuDailyActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".zhihuDaily.zhihuDailyDetailActivity" />
-        <activity android:name=".playvideo.PlayVideoActivity"
-                  android:screenOrientation="landscape"
-            ></activity>
-
-
+        <activity
+            android:name=".playvideo.PlayVideoActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".Activity.handlerActivity"></activity>
     </application>
 
 </manifest>
