--- a/KeepLearn/lockapp/src/main/AndroidManifest.xml
+++ b/KeepLearn/lockapp/src/main/AndroidManifest.xml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.study.dh.lockapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.study.dh.lockapp">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:label=" / ">
+
+        </activity>
+
+        <service android:name=".service.LockService" />
+
+        <activity android:name=".activity.SecondActivity" />
+
+        <receiver
+            android:name=".broadcast.NetworkChangeReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".broadcast.MyBroadcastReceiver">
+            <intent-filter android:priority="100">
+                <action android:name="com.study.dh.lockapp.broadcast.MY_BROADCAST" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".activity.ThirdActivity" />
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <service android:name=".service.LockService"></service>
+        </activity>
     </application>
 
 </manifest>
