--- a/KeepLearn/lockapp/build.gradle
+++ b/KeepLearn/lockapp/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'    //反射
     compile 'org.greenrobot:greendao:3.2.0'   //数据库操作
 
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'   //okhttp3  引包
+
 
 }
