--- a/KeepLearn/lockapp/build.gradle
+++ b/KeepLearn/lockapp/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.0'   //数据库操作
 
     compile 'com.squareup.okhttp3:okhttp:3.4.1'   //okhttp3  引包
+    compile 'com.android.support:recyclerview-v7:25.1.1'    //recyclerview依赖版本 可跟appcompat-v7一样
 
 
 }
