--- a/KeepLearn/theyear/build.gradle
+++ b/KeepLearn/theyear/build.gradle
@@ -23,13 +23,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:25.1.1'    //recyclerview依赖版本 可跟appcompat-v7一样
-    compile 'com.jakewharton:butterknife:7.0.1'    //反射
-
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    //recyclerview依赖版本 可跟appcompat-v7一样
+    compile 'com.jakewharton:butterknife:7.0.1'
+    //反射
+    compile 'com.android.support:design:25.1.1'
+    //material desgin   抽屉菜单
+    compile files('libs/TXZ_SDK.jar')
 }
