--- a/KeepLearn/theyear/build.gradle
+++ b/KeepLearn/theyear/build.gradle
@@ -27,13 +27,30 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
     //recyclerview依赖版本 可跟appcompat-v7一样
-    compile 'com.jakewharton:butterknife:7.0.1'
     //反射
-    compile 'com.android.support:design:25.1.1'
     //material desgin   抽屉菜单
     compile files('libs/TXZ_SDK.jar')
+
+    //volley使用
+    //eventbus 3.0
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support:support-v4:25.1.1'
+    testCompile 'junit:junit:4.12'
+
+
+
+    compile "com.android.support:support-v4:+"      //轮播
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+
+
+    compile 'com.android.support:cardview-v7:25.1.1'   //卡片布局
+
 }
